--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,16 +7,16 @@
 
 // Customize the background color
 body {
-  // background-color: #f2f2f2;;
+  background: linear-gradient(to bottom right,  #A8DDFF, #EEF7FF);
 }
 
 // Customize the menubar color
 .ui.menu {
-  // background: $background-start;
+  background: #A8DDFF;
 }
 
 // Customize the home page icon colors
 .icon-color {
-  // color: silver;
+  color: #445089;
 }
 
