--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -12,7 +12,7 @@ body {
 
 // Customize the menubar color
 .ui.menu {
-  background: #A8DDFF;
+  background: #EEF7FF;
 }
 
 // Customize the home page icon colors
