--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -8,6 +8,7 @@
 // Customize the background color
 body {
   background: linear-gradient(to bottom right,  #A8DDFF, #EEF7FF);
+  background-attachment: fixed;
 }
 
 // Customize the menubar color
