--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -8,6 +8,9 @@
 // Customize the background color
 body {
   background: linear-gradient(to bottom right,  #A8DDFF, #EEF7FF);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
