--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -13,6 +13,27 @@ body {
   background-attachment: fixed;
 }
 
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
 // Customize the menubar color
 .ui.menu {
   background: #EEF7FF;
