--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,7 +7,7 @@
 
 // Customize the background color
 body {
-  background: linear-gradient(to bottom right,  #A8DDFF, #EEF7FF);
+  background: linear-gradient(to bottom right,  #A8DDFF, #15367d);
   height: auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
