--- a/_includes/theme-projects-builtin-1.html
+++ b/_includes/theme-projects-builtin-1.html
@@ -1,11 +1,13 @@
-<div style="padding-top: 20px" class="ui container ">
+<div style="max-width: 75%; margin-top: 55px"; padding-bottom: 45px; margin-bottom: 55px"; class = "ui fluid centered card">
+  <div style="padding-top: 20px" class="ui container ">
 
-  <div class="ui stackable centered four cards">
-    {% assign project_pages = site.pages | where: "type", "project" | sort: "date" | reverse %}
-    {% for page in project_pages %}
-      {% unless page.draft %}
-        {% include project-card.html page=page %}
-      {% endunless %}
-    {% endfor %}
+    <div class="ui stackable centered four cards">
+      {% assign project_pages = site.pages | where: "type", "project" | sort: "date" | reverse %}
+      {% for page in project_pages %}
+        {% unless page.draft %}
+          {% include project-card.html page=page %}
+        {% endunless %}
+      {% endfor %}
+    </div>
   </div>
 </div>
