--- a/_includes/project-row.html
+++ b/_includes/project-row.html
@@ -1,32 +1,33 @@
 <!-- Used by theme-projects-builtin-2 -->
-
-<div class="row">
-  <div style="text-align: center" class="three wide column">
-    {% if include.page.image %}
-    <img class="ui middle aligned medium circular image" src="{{ site.baseurl }}/{{ include.page.image }}">
-    {% endif %}
-  </div>
-
-  <div class="six wide column">
-    <h2 class="header no-bottom">{{ include.page.title }}</h2>
-    <p class="">{{ include.page.date }}</p>
-    <p>{{ include.page.summary }}</p>
-
-    <p>
-    <div style="text-align: center" class="ui mini labels">
-      {% for label in include.page.labels %}
-      <div class="ui basic label">{{ label }}</div>
-      {% endfor %}
-    </div>
-    </p>
-
-    <div style="text-align: center">
-      {% if page.projecturl %}
-        <a class="ui basic button" href="{{ page.projecturl }}">Read More</a>
-      {% else %}
-        <a class="ui basic button" href="{{ site.baseurl}}{{ include.page.url }}">Read More</a>
+<div style="max-width: 75%; padding-top: 0px; margin-top: 55px"; padding-bottom: 45px; margin-bottom: 55px"; class = "ui fluid centered card">
+  <div class="row">
+    <div style="text-align: center" class="three wide column">
+      {% if include.page.image %}
+      <img class="ui middle aligned medium circular image" src="{{ site.baseurl }}/{{ include.page.image }}">
       {% endif %}
     </div>
-    <hr style="margin-top: 20px">
+
+    <div class="six wide column">
+      <h2 class="header no-bottom">{{ include.page.title }}</h2>
+      <p class="">{{ include.page.date }}</p>
+      <p>{{ include.page.summary }}</p>
+
+      <p>
+      <div style="text-align: center" class="ui mini labels">
+        {% for label in include.page.labels %}
+        <div class="ui basic label">{{ label }}</div>
+        {% endfor %}
+      </div>
+      </p>
+
+      <div style="text-align: center">
+        {% if page.projecturl %}
+          <a class="ui basic button" href="{{ page.projecturl }}">Read More</a>
+        {% else %}
+          <a class="ui basic button" href="{{ site.baseurl}}{{ include.page.url }}">Read More</a>
+        {% endif %}
+      </div>
+      <hr style="margin-top: 20px">
+    </div>
   </div>
 </div>
