--- a/_includes/theme-projects-builtin-2.html
+++ b/_includes/theme-projects-builtin-2.html
@@ -1,10 +1,12 @@
-<div style="padding-top: 20px" class="ui four column centered stackable grid container">
+<div style="max-width: 88%; margin-top: 55px"; padding-bottom: 45px; margin-bottom: 55px"; class = "ui fluid centered card">
+  <div style="padding-top: 20px" class="ui four column centered stackable grid container">
 
-  {% assign project_pages = site.pages | where: "type", "project" | sort: "title" %}
-  {% for page in project_pages %}
-    {% unless page.draft %}
-      {% include project-row.html page=page %}
-    {% endunless %}
-  {% endfor %}
+    {% assign project_pages = site.pages | where: "type", "project" | sort: "title" %}
+    {% for page in project_pages %}
+      {% unless page.draft %}
+        {% include project-row.html page=page %}
+      {% endunless %}
+    {% endfor %}
 
+  </div>
 </div>
