--- a/_includes/theme-projects-builtin-1a.html
+++ b/_includes/theme-projects-builtin-1a.html
@@ -1,13 +1,14 @@
 <!-- Like theme-projects-builtin-1, but uses project-card-2.html (i.e. entire card is a link). -->
+<div style="max-width: 88%; margin-top: 55px"; padding-bottom: 45px; margin-bottom: 55px"; class = "ui fluid centered card">
+  <div style="padding-top: 20px" class="ui container ">
 
-<div style="padding-top: 20px" class="ui container ">
-
-  <div class="ui stackable centered four cards">
-    {% assign project_pages = site.pages | where: "type", "project" | sort: "date" | reverse %}
-    {% for page in project_pages %}
-      {% unless page.draft %}
-        {% include project-card-1a.html page=page %}
-      {% endunless %}
-    {% endfor %}
+    <div class="ui stackable centered four cards">
+      {% assign project_pages = site.pages | where: "type", "project" | sort: "date" | reverse %}
+      {% for page in project_pages %}
+        {% unless page.draft %}
+          {% include project-card-1a.html page=page %}
+        {% endunless %}
+      {% endfor %}
+    </div>
   </div>
 </div>
