--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -47,6 +47,9 @@
         <a href="{{ site.baseurl}}/bio/">
           <button class="ui secondary button">{{ site.bio-page-label }}</button>
         </a>
+        <a href= "https://chrismakeskode.github.io/resume/resume.pdf" download = "Christian Kamarga Resume.pdf">
+          <button class="ui primary button">Download Resume</button>
+        </a>
       </div>
     </div>
   </div>
