--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -47,7 +47,7 @@
         <a href="{{ site.baseurl}}/bio/">
           <button class="ui secondary button">{{ site.bio-page-label }}</button>
         </a>
-        <a href= "https://chrismakeskode.github.io/resume/resume.pdf" download = "Christian Kamarga Resume.pdf" target="_blank">
+        <a href= "https://chrismakeskode.github.io/resume/resume.pdf" download = "Christian Kamarga Resume.pdf">
           <button class="ui primary button">Download Resume</button>
         </a>
       </div>
