--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -44,11 +44,11 @@
         <!-- <a href="{{ site.baseurl}}/essays/">
           <button class="ui basic button">Essays ({{ num_essays }})</button>
         </a> -->
-        <a href="{{ site.baseurl}}/bio/">
+        <!-- Redundant resume button leading to https://chrismakeskode.github.io/bio/ <a href="{{ site.baseurl}}/bio/">
           <button class="ui secondary button">{{ site.bio-page-label }}</button>
-        </a>
+        </a> -->
         <a href= "https://chrismakeskode.github.io/resume/resume.pdf" download = "Christian Kamarga Resume.pdf">
-          <button class="ui primary button">Download Resume</button>
+          <button class="ui secondary button">Download Resume</button>
         </a>
       </div>
     </div>
