--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -48,7 +48,10 @@
           <button class="ui secondary button">{{ site.bio-page-label }}</button>
         </a> -->
         <a href= "https://chrismakeskode.github.io/resume/resume.pdf" download = "Christian Kamarga Resume.pdf">
-          <button class="ui secondary button">Download Resume</button>
+          <button class="ui secondary button">Download General Resume</button>
+        </a>
+        <a href= "https://chrismakeskode.github.io/resume/Christian Kamarga Hadoop Automation and SQL Resume.pdf" download = "Christian Kamarga Resume.pdf">
+          <button class="ui secondary button">Download Hadoop Automation & SQL Resume</button>
         </a>
       </div>
     </div>
