--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -50,8 +50,11 @@
         <a href= "https://chrismakeskode.github.io/resume/resume.pdf" download = "Christian Kamarga Resume.pdf">
           <button class="ui secondary button">Download General Resume</button>
         </a>
-        <a href= "https://chrismakeskode.github.io/resume/Christian Kamarga Hadoop Automation and SQL Resume.pdf" download = "Christian Kamarga Resume.pdf">
+        <a href= "https://chrismakeskode.github.io/resume/Christian Kamarga Hadoop Automation and SQL Resume.pdf" download = "Christian Kamarga Hadoop Automation and SQL Resume.pdf">
           <button class="ui secondary button">Download Hadoop Automation & SQL Resume</button>
+        </a>
+        <a href= "https://chrismakeskode.github.io/resume/Christian Kamarga Python Data Analytics Data Science Visualization Resume.pdf" download = "Christian Kamarga Python Data Analytics Data Science Visualization Resume.pdf">
+          <button class="ui secondary button">Download Python Data Analytics & Data Science Visualization Resume</button>
         </a>
       </div>
     </div>
