--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -50,10 +50,10 @@
         <a href= "https://chrismakeskode.github.io/resume/resume.pdf" download = "Christian Kamarga Resume.pdf">
           <button class="ui secondary button">Download General Resume</button>
         </a>
-        <a href= "https://chrismakeskode.github.io/resume/Christian Kamarga Networking Resume Aug 2024.pdf" download = "Christian Kamarga Networking Resume Aug 2024.pdf">
+        <a href= "https://chrismakeskode.github.io/resume/Christian Kamarga Networking Resume Aug 2024 2.pdf" download = "Christian Kamarga Networking Resume Aug 2024.pdf">
           <button class="ui secondary button">Download Networking Resume</button>
         </a>
-        <a href= "https://chrismakeskode.github.io/resume/Christian Kamarga Python Data Analytics Resume Aug 2024.pdf" download = "Christian Kamarga Python Data Analytics Resume Aug 2024.pdf">
+        <a href= "https://chrismakeskode.github.io/resume/Christian Kamarga Data Engineer Resume Aug 2024.pdf" download = "Christian Kamarga Python Data Analytics Resume Aug 2024.pdf">
           <button class="ui secondary button">Download Python Data Analytics & Data Science Visualization Resume</button>
         </a>
       </div>
